--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -6,8 +6,8 @@ block content
     form(action="/login",method="post")        
             .form-group
                 label(for="email") Email
-                input#email(type="email", class="form-control", name="email" value="rimshaarif723@gmail.com" required)
+                input#email(type="email", class="form-control", name="email" value="raziq.naeemzai@gmail.com" required)
             .form-group
                 label(for="password") Password
-                input#price(type="password", class="form-control", name="password", value="123" required)
+                input#price(type="password", class="form-control", name="password", value="raziq" required)
             input(type="submit", class="btn btn-info" value="Login")
