--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -7,21 +7,21 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/" style= "color:white;">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/" style= "color:green;">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/cart" style= "color:white;">My Shopping Cart List </a>
+        <a class="nav-link" href="/cart" style= "color:green;">My Shopping Cart List </a>
       </li>
       if !user
         <li class="nav-item">
-          <a class="nav-link" href="/register" style= "color:white;">Register</a>
+          <a class="nav-link" href="/register" style= "color:green;">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/login" style= "color:white;">Login</a>
+          <a class="nav-link" href="/login" style= "color:green;">Login</a>
         </li>
       if user
         <li class="nav-item">
-          <a class="nav-link" href="/logout" style= "color:white;">Logout</a>
+          <a class="nav-link" href="/logout" style= "color:green;">Logout</a>
         </li>
     </ul>
     
