--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -9,5 +9,5 @@ block content
                 input#email(type="email", class="form-control", name="email" value="raziq.naeemzai@gmail.com" required)
             .form-group
                 label(for="password") Password
-                input#price(type="password", class="form-control", name="password", value="raziq" required)
+                input#price(type="password", class="form-control", name="password", value="12345" required)
             input(type="submit", class="btn btn-info" value="Login")
