--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1 Name: AbdulRaziq 
-  h1.heading Registration No: FA18-BSE-407
+  h1 Name: Rimsha Arif
+  h1.heading Registration No: FA18-BSE-006
